--- a/Ecommerce(Basic)/Store/index.html
+++ b/Ecommerce(Basic)/Store/index.html
@@ -5,161 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce Project</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="store.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/5baac9ce9a.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./store.js" defer></script>
 </head>
 <body>
-    <div id="EcommerceContainer">
-        <header>
-            <ul class='header'>
-                <li><a href="./index.html">HOME</a></li>
-                <li><a href="#">STORE</a></li>
-                <li><a href="./about.html">ABOUT</a></li>
-                <a href="#cart" class="cart-holder">cart<span class='cart-number'>0</span></a>
-            </ul>
-            <h1>The Generics</h1>
-        </header>
-        <section id="Products" class="container">
-            <h2>Products</h2>
-        <!---    <div id ="music-content">
-                <div id='album1'>
-                    <h3>Album 1</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Album 1.png" alt="">
-                    </div>
-                                    <div class="prod-details">
-                        <span>$<span>12.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album2'>
-                    <h3>Album 2</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Album 2.png" alt="">
-                    </div>
-                                    <div class="prod-details">
-                        <span>$<span>14.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album3'>
-                    <h3>Album 3</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Album 3.png" alt="">
-                    </div>
-                                    <div class="prod-details">
-                        <span>$<span>9.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id='album4'>
-                    <h3>Album 4</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Album 4.png" alt="">
-                    </div>
-                                    <div class="prod-details">
-                        <span>$<span>19.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
-        -->
+    <header>
+        <ul class='header'>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="#">STORE</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="./order.html">ORDERS</a></li>
+            <a href="#cart" class="cart-holder">cart<span class='cart-number'>0</span></a>
+        </ul>
+        <h1>The Generics</h1>
+    </header>
 
-        </section>
+    <section id="music" class="container">
+        <h2>MUSIC</h2>
+        <div id ="music-content"> 
+           <!-- <div>
+                <h3>Album 1</h3>
+                <img src="/img/Album 1.png" alt="">
+                <div class="prod-details">
+                    <span>$12.99</span>
+                    <button class="shop-item-button" type='button'>ADD TO CART</button>
+                </div>
+            </div> -->
+        </div>
+        <div id="pagination"></div>
 
-        <!--
-        <section id="merch" class="container">
-            <h2>MERCH</h2>
-          <!-- <div id="merch-content">
-                <div id="t-shirt">
-                    <h3>T-Shirt</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Shirt.png" alt="">
-                    </div>
-                                <div class="prod-details">
-                        <span>$<span>19.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-                <div id="coffee-cup">
-                    <h3>Coffee Cup</h3>
-                    <div class="image-container">
-                        <img class="prod-images" src="./img/Cofee.png" alt="">
-                    </div>
-                                <div class="prod-details">
-                        <span>$<span>6.99</span></span>
-                        <button class="shop-item-button" type='button'>ADD TO CART</button>
-                    </div>
-                </div>
-            </div>
--->
-            
-
-        </section>
-        <section id="cart" class="container">
-            <h2>CART</h2>
-            <button class="cancel">X</button>
-            <div class="cart-row cart-header">
-                <span class='cart-item cart-column'>ITEM</span>
-                <span class='cart-price cart-column'>PRICE</span>
-                <span class='cart-quantity cart-column'>QUANTITY</span>
-            </div>
-            <div class='cart-items'>
-                <!-- <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="img/Shirt.png" alt="">
-                        <span>T-Shirt</span>
-                    </span>
-                    <span class='cart-price cart-column'>$19.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div>
-                <div class="cart-row">
-                    <span class='cart-item cart-column'>
-                        <img class='cart-img' src="/img/Album 3.png" alt="">
-                        <span>Album 3</span>
-                    </span>
-                    <span class='cart-price cart-column'>$9.99</span>
-                    <span class='cart-quantity cart-column'>
-                        <input type="text">
-                        <button>REMOVE</button>
-                    </span>
-                </div> -->
-            </div>
-            <div class="cart-total">
-                <span>
-                    <span class='total-title'> <strong>Total</strong>
-                        </span>
-                    $<span id='total-value'>0</span>
-                </span>
-            </div>
-            <button class='purchase-btn' type='button'>PURCHASE</button>
-        </section>
+    </section>
+    <section id="cart" class="container">
+        <h2>CART</h2>
+        <button class="cancel">X</button>
+        <div class="cart-row cart-header">
+            <span class='cart-item cart-column'>ITEM</span>
+            <span class='cart-price cart-column'>PRICE</span>
+            <span class='cart-quantity cart-column'>QUANTITY</span>
+        </div>
+        <div class='cart-items'>
+        </div>
+        <button class='purchase-btn' type='button'>PURCHASE</button>
+        <div class="cart-total">
+            <span>
+              <span class="total-title"> <strong>Total</strong> </span>
+              $ <span id="total-value" class="total-price">0</span>
+            </span>
+        </div>
+    </section>
 
         <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
-    </div>
+
     <!-- Toggle notification -->
     <div id="container"></div>
     <footer>
-        <div class="footer-title">
-            The Generics
-        </div>
+        <div class="footer-title">The Generics</div>
         <div class="footer-icons">
-            <ul>
-                <li><a href="https://www.youtube.com">
-                    <img src="https://findicons.com/files/icons/2781/google_jfk_icons/256/youtube_ico.png" alt="">
-                </a></li>
-                <li><a href="https://spotify.com">
-                    <img src="https://pbs.twimg.com/profile_images/558556141605511168/2JDJX8SQ_400x400.png" alt="">
-                </a></li>
-                <li><a href="https://facebook.com">
-                    <img src="https://cdn2.downdetector.com/static/uploads/logo/FB-f-Logo__blue_512.png" alt="">
-                </a></li>
-            </ul>
+          <ul>
+            <li>
+              <a href="https://www.youtube.com">
+                <i class="fa fa-youtube" style="color: #c4302b"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://spotify.com">
+                <i
+                  class="fa fa-spotify"
+                  aria-hidden="true"
+                  style="color: #1ed760"
+                ></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com">
+                <i
+                  class="fa fa-facebook-official"
+                  aria-hidden="true"
+                  style="color: #3b5998"
+                ></i>
+              </a>
+            </li>
+          </ul>
         </div>
-    </footer>
-   
+      </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 </html>
