--- a/public/order.html
+++ b/public/order.html
@@ -9,58 +9,24 @@
       src="https://kit.fontawesome.com/5baac9ce9a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./store.js" defer></script>
+    <script src="./order.js" defer></script>
 </head>
 <body>
     <header>
         <ul class='header'>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="#">STORE</a></li>
+            <li><a href="./Home.html">HOME</a></li>
+            <li><a href="./store.html">STORE</a></li>
             <li><a href="./about.html">ABOUT</a></li>
-            <li><a href="./order.html">ORDERS</a></li>
-            <a href="#cart" class="cart-holder">cart<span class='cart-number'>0</span></a>
         </ul>
         <h1>The Generics</h1>
     </header>
 
-    <section id="music" class="container">
-        <h2>MUSIC</h2>
-        <div id ="music-content"> 
-           <!-- <div>
-                <h3>Album 1</h3>
-                <img src="/img/Album 1.png" alt="">
-                <div class="prod-details">
-                    <span>$12.99</span>
-                    <button class="shop-item-button" type='button'>ADD TO CART</button>
-                </div>
-            </div> -->
-        </div>
-        <div id="pagination"></div>
+    <section id="orders" class="container">
+        <h2> ORDERS </h2>
+        <div id="order-content">
 
-    </section>
-    <section id="cart" class="container">
-        <h2>CART</h2>
-        <button class="cancel">X</button>
-        <div class="cart-row cart-header">
-            <span class='cart-item cart-column'>ITEM</span>
-            <span class='cart-price cart-column'>PRICE</span>
-            <span class='cart-quantity cart-column'>QUANTITY</span>
-        </div>
-        <div class='cart-items'>
-        </div>
-        <button class='purchase-btn' type='button'>PURCHASE</button>
-        <div class="cart-total">
-            <span>
-              <span class="total-title"> <strong>Total</strong> </span>
-              $ <span id="total-value" class="total-price">0</span>
-            </span>
         </div>
     </section>
-
-        <button class="cart-btn-bottom"> <a href="#cart" class="cart-bottom">See the cart</a></button>
-
-    <!-- Toggle notification -->
-    <div id="container"></div>
     <footer>
         <div class="footer-title">The Generics</div>
         <div class="footer-icons">
